--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 {% if page.pdf %}
-  <meta http-equiv="refresh" content="0; url={{ page.pdf | relative_url }}">
+  <p><a href="{{ page.pdf | relative_url }}" target="_blank" rel="noopener">View PDF</a></p>
 {% endif %}
 
 <h1>{{ page.title }}</h1>
