--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -1,8 +1,13 @@
 ---
 layout: default
 ---
+
 {% if page.pdf %}
-  <p><a href="{{ page.pdf | relative_url }}" target="_blank" rel="noopener">View PDF</a></p>
+  <iframe
+    src="{{ page.pdf | relative_url }}"
+    style="width:100%; height:900px;"
+    loading="lazy">
+  </iframe>
 {% endif %}
 
 <h1>{{ page.title }}</h1>
